<resources>
    <string name="app_name">CarStore</string>

    <!-- Titles -->
    <string name="login_fragment_label">Login</string>
    <string name="register_fragment_label">Register</string>
    <string name="car_list_fragment_label">My Car Store</string>
    <string name="car_register_fragment_label">Register car</string>
    <string name="car_edit_fragment_label">Edit car</string>

    <!-- Fragment Login -->
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_sign_in">Sign in</string>
    <string name="txt_sign_up">Sign up</string>
    <string name="txt_do_not_have_account">Don\'t have an account yet?</string>
    <string name="txt_do_you_already_have_account">Do you already have an account?</string>
    <string name="txt_invalid_email">Invalid Email</string>
    <string name="txt_must_enter_password">You must enter the password</string>
    <string name="txt_user_registered">User registered successfully</string>

    <!-- Fragment Car List -->
    <string name="txt_delete_this_car">Do you want to delete this car?</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_want_to_log_out">Do you want to log out?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no_cars_registered">No cars registered, click the + button to add</string>

    <!-- Fragment Car Register -->
    <string name="txt_brand">Brand</string>
    <string name="txt_model">Model</string>
    <string name="txt_color">Color</string>
    <string name="txt_save">Save</string>

    <!-- Layout Car Item -->
    <string name="txt_brand_title">"Brand: "</string>
    <string name="txt_model_title">"Model: "</string>
    <string name="txt_color_title">"Color: "</string>

</resources>