<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginTop="@dimen/dimen_64"
        android:layout_marginHorizontal="@dimen/dimen_48"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dimen_10"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_marginHorizontal="@dimen/dimen_48"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:padding="@dimen/dimen_10"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnSignin"
        app:layout_constraintStart_toStartOf="@+id/edtEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailAddress" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_48"
        android:layout_marginBottom="@dimen/dimen_10"
        android:text="@string/txt_sign_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_64"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_do_not_have_account"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18" />

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>