<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/dimen_8"
    android:layout_marginHorizontal="@dimen/dimen_16"
    app:cardCornerRadius="@dimen/dimen_16"
    app:cardElevation="@dimen/dimen_8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_16">

        <TextView
            android:id="@+id/tvBrandTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/gray"
            android:text="@string/txt_brand_title" />

        <TextView
            android:id="@+id/tvBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_6"
            app:layout_constraintTop_toTopOf="@+id/tvBrandTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvBrandTitle"
            app:layout_constraintStart_toEndOf="@+id/tvBrandTitle"
            android:layout_gravity="center"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            tools:text="FIAT" />

        <TextView
            android:id="@+id/tvModelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvBrandTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_8"
            android:textColor="@color/gray"
            android:text="@string/txt_model_title" />

        <TextView
            android:id="@+id/tvModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_6"
            app:layout_constraintTop_toTopOf="@+id/tvModelTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvModelTitle"
            app:layout_constraintStart_toEndOf="@+id/tvModelTitle"
            android:layout_gravity="center"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            tools:text="Pulse" />

        <TextView
            android:id="@+id/tvColorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvModelTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_8"
            android:textColor="@color/gray"
            android:text="@string/txt_color_title" />

        <TextView
            android:id="@+id/tvColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_6"
            app:layout_constraintTop_toTopOf="@+id/tvColorTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvColorTitle"
            app:layout_constraintStart_toEndOf="@+id/tvColorTitle"
            android:layout_gravity="center"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            tools:text="Amarelo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/dimen_8"
            app:srcCompat="@drawable/ic_edit_24"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/dimen_8"
            app:srcCompat="@drawable/ic_delete_24"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>